<resources>
    <string name="app_name">FYP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="signout">Signout</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="create_event">Create Event</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="refresh">Refresh</string>
    <string name="number_tickets_sold">Tickets Sold</string>
    <string name="revenue">Revenue</string>
    <string name="purchaseDate">Purchase Date</string>
    <string name="username">Username</string>
    <string name="venue">Venue</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_event_image">Choose Event Image</string>
    <string name="createeventimage">Create Event</string>
    <string name="autologin">Auto login</string>
    <string name="stayloggedin">Stay logged in</string>
</resources>
