<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.conornaylor.fyp.CreateEventFragment">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/create_event_progress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/event_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/_create_event_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name"
                    android:imeActionId="@+id/button_create_event"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/mapImage"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/map" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="6"
                    android:layout_row="0">

                    <EditText
                        android:id="@+id/eventLocation"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1" />


                </android.support.design.widget.TextInputLayout>

            </GridLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eventDescription"
                    style="?attr/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/priceEvent"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/numTickets"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_column="4"
                    android:layout_row="0"
                    android:ems="10"
                    android:hint="Number Tickets"
                    android:inputType="number" />
            </GridLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/eventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="date"
                    android:maxLines="1" />


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_menu_gallery"
                    android:elevation="0dp"
                    android:text="Choose Event Image" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_create_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableRight="@drawable/ic_menu_send"
                    android:drawableTint="@android:color/background_dark"
                    android:elevation="0dp"
                    android:text="@string/create_event" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
