<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.conornaylor.fyp.event.EventStatsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/reg_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">


        <LinearLayout
            android:id="@+id/stats_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/num_sold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:hint="@string/number_tickets_sold"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/revenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/revenue"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <GridLayout
                    android:id="@+id/graphView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                </GridLayout>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
